--- a/ApachePOI/.classpath
+++ b/ApachePOI/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-19"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/sai/Desktop/poi-bin-5.2.3/poi-5.2.3.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -23,16 +27,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/sai/Desktop/poi-bin-5.2.3/poi-ooxml-5.2.3.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/sai/Desktop/poi-bin-5.2.3/poi-ooxml-full-5.2.3.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/sai/Desktop/poi-bin-5.2.3/poi-ooxml-lite-5.2.3.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
